--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,8 @@
   <div>
     <%- include ./partials/nav.ejs %>
     <%- include ./partials/homePageImage.ejs %>
-    <div class="flex xs:flex-col xl:flex-row mx-16 my-28 items-center justify-between">
+    <div class="flex xs:flex-col xs:mx-5 xs:my-10 sm:my-20 sm:mx-16  
+    xl:flex-row  items-center justify-between">
       <%- include ./partials/imageSliderIndex.ejs  %>
       <%- include ./partials/newsletter.ejs  %>
     </div>
