--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,8 +6,8 @@ h-36 items-center lg:justify-between mx-20 xs:max-lg:mx-5">
             DriftDreams
         </a>
     </h1>
-    <ul class="flex gap-8 xs:max-sm:flex-col
-    items-center xs:max-lg:mt-10">
+    <ul class="flex gap-8 items-center xs:max-sm:flex-col
+    xs:mt-10 sm:mt-20 lg:mt-0  ">
         <li class="liNav">
             <a href="/about">ABOUT</a>
         </li>
