--- a/views/partials/newsletter.ejs
+++ b/views/partials/newsletter.ejs
@@ -1,8 +1,8 @@
-<div class="p-10 w-newsLetter flex flex-col items-center justify-around  h-newsLetter mx-20">
+<div class="p-10 w-newsLetter flex flex-col items-center sm:justify-around xs:gap-10  h-newsLetter mx-20">
     <div class="flex flex-col gap-8 items-center">
-        <h2 class="font-bodyFont md:text-3xl xs:text-xl">Monthly Newsletter</h2>
+        <h2 class="font-bodyFont xs:text-xl sm:text-2xl md:text-3xl ">Monthly Newsletter</h2>
         <p class="text-primary text-lg px-16 xs:w-80
-        xs:text-sm md:text-lg md:w-full">Sign up to receive updates from
+        xs:text-sm sm:text-lg sm:w-full md:text-xl ">Sign up to receive updates from
             our shop,
             including new car announcements and upcoming events.</p>
     </div>
