--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -623,6 +623,11 @@ video {
   margin-right: 0.25rem;
 }
 
+.mx-10{
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
 .mx-16{
   margin-left: 4rem;
   margin-right: 4rem;
@@ -653,11 +658,6 @@ video {
   margin-bottom: 5rem;
 }
 
-.my-28{
-  margin-top: 7rem;
-  margin-bottom: 7rem;
-}
-
 .my-52{
   margin-top: 13rem;
   margin-bottom: 13rem;
@@ -666,6 +666,11 @@ video {
 .my-64{
   margin-top: 16rem;
   margin-bottom: 16rem;
+}
+
+.mx-5{
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 
 .mb-20{
@@ -738,6 +743,14 @@ video {
 
 .mt-8{
   margin-top: 2rem;
+}
+
+.ml-5{
+  margin-left: 1.25rem;
+}
+
+.ml-10{
+  margin-left: 2.5rem;
 }
 
 .flex{
@@ -954,10 +967,6 @@ video {
   justify-content: space-between;
 }
 
-.justify-around{
-  justify-content: space-around;
-}
-
 .gap-10{
   gap: 2.5rem;
 }
@@ -1100,6 +1109,11 @@ video {
   padding-right: 4rem;
 }
 
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-32{
   padding-left: 8rem;
   padding-right: 8rem;
@@ -1152,6 +1166,10 @@ video {
   padding-left: 2.5rem;
 }
 
+.pl-2{
+  padding-left: 0.5rem;
+}
+
 .pl-5{
   padding-left: 1.25rem;
 }
@@ -1166,6 +1184,10 @@ video {
 
 .pt-14{
   padding-top: 3.5rem;
+}
+
+.pt-2{
+  padding-top: 0.5rem;
 }
 
 .pt-5{
@@ -1474,6 +1496,18 @@ video {
   transition-duration: 500ms;
 }
 
+@media screen and (min-width: 320px) and (max-width: 640px) {
+  .video {
+    width: calc(100% - 2rem);
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 1024px) {
+  .imgSliderXsLg {
+    width: calc(100% - 2rem);
+  }
+}
+
 .checked\:bg-black:checked{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -1509,62 +1543,51 @@ video {
 }
 
 @media (min-width: 320px){
+  .xs\:mx-5{
+    margin-left: 1.25rem;
+    margin-right: 1.25rem;
+  }
+
   .xs\:mx-auto{
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .xs\:my-10{
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
   }
 
   .xs\:mt-10{
     margin-top: 2.5rem;
   }
 
-  .xs\:h-imgSliderXs{
-    height: 15rem;
-  }
-
-  .xs\:w-imgSliderXs{
-    width: 25rem;
-  }
-
-  .xs\:w-full{
-    width: 100%;
-  }
-
-  .xs\:w-20{
-    width: 5rem;
-  }
-
-  .xs\:w-60{
-    width: 15rem;
+  .xs\:w-40{
+    width: 10rem;
   }
 
   .xs\:w-80{
     width: 20rem;
   }
 
-  .xs\:w-40{
-    width: 10rem;
+  .xs\:w-full{
+    width: 100%;
   }
 
   .xs\:flex-col{
     flex-direction: column;
   }
 
-  .xs\:gap-2{
-    gap: 0.5rem;
+  .xs\:gap-10{
+    gap: 2.5rem;
   }
 
   .xs\:p-1{
     padding: 0.25rem;
   }
 
-  .xs\:text-xs{
-    font-size: 0.75rem;
-    line-height: 1rem;
-  }
-
-  .xs\:text-xl{
-    font-size: 1.25rem;
+  .xs\:text-lg{
+    font-size: 1.125rem;
     line-height: 1.75rem;
   }
 
@@ -1573,14 +1596,20 @@ video {
     line-height: 1.25rem;
   }
 
+  .xs\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .xs\:text-xs{
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
   @media not all and (min-width: 1024px){
     .xs\:max-lg\:mx-5{
       margin-left: 1.25rem;
       margin-right: 1.25rem;
-    }
-
-    .xs\:max-lg\:mt-10{
-      margin-top: 2.5rem;
     }
 
     .xs\:max-lg\:mt-72{
@@ -1592,13 +1621,6 @@ video {
     }
   }
 
-  @media not all and (min-width: 768px){
-    .xs\:max-md\:text-sm{
-      font-size: 0.875rem;
-      line-height: 1.25rem;
-    }
-  }
-
   @media not all and (min-width: 640px){
     .xs\:max-sm\:flex-col{
       flex-direction: column;
@@ -1607,29 +1629,39 @@ video {
 }
 
 @media (min-width: 640px){
+  .sm\:mx-16{
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
+
+  .sm\:my-20{
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+  }
+
   .sm\:mt-20{
     margin-top: 5rem;
   }
 
-  .sm\:h-imgSliderSm{
-    height: 25rem;
-  }
-
-  .sm\:w-imgSliderSm{
-    width: 30rem;
+  .sm\:w-full{
+    width: 100%;
   }
 
   .sm\:flex-row{
     flex-direction: row;
   }
 
+  .sm\:justify-around{
+    justify-content: space-around;
+  }
+
   .sm\:p-4{
     padding: 1rem;
   }
 
-  .sm\:text-sm{
-    font-size: 0.875rem;
-    line-height: 1.25rem;
+  .sm\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .sm\:text-lg{
@@ -1637,23 +1669,19 @@ video {
     line-height: 1.75rem;
   }
 
-  .sm\:text-xl{
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+  .sm\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 
 @media (min-width: 768px){
   .md\:h-imgSliderMd{
-    height: 28rem;
+    height: 35rem;
   }
 
   .md\:w-imgSliderMd{
-    width: 35rem;
-  }
-
-  .md\:w-full{
-    width: 100%;
+    width: 40rem;
   }
 
   .md\:text-3xl{
@@ -1663,6 +1691,11 @@ video {
 
   .md\:text-lg{
     font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-xl{
+    font-size: 1.25rem;
     line-height: 1.75rem;
   }
 }
@@ -1680,7 +1713,15 @@ video {
     height: 40rem;
   }
 
+  .lg\:h-popularCar{
+    height: 40rem;
+  }
+
   .lg\:w-imgSlider{
+    width: 50rem;
+  }
+
+  .lg\:w-popularCar{
     width: 50rem;
   }
 
@@ -1700,18 +1741,9 @@ video {
     font-size: 2.25rem;
     line-height: 2.5rem;
   }
-
-  .lg\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
 }
 
 @media (min-width: 1280px){
-  .xl\:w-imgSlider{
-    width: 50rem;
-  }
-
   .xl\:flex-row{
     flex-direction: row;
   }
