--- a/views/partials/homePageImage.ejs
+++ b/views/partials/homePageImage.ejs
@@ -1,6 +1,6 @@
 <div class="relative flex justify-center items-center xs:max-lg:mt-72 
 sm:mt-20 lg:mt-0">
     <img class="max-h-index opacity-85 w-full" src="/img/carImg.jpg" alt="car picture">
-    <p class="absolute text-white lg:text-4xl xs:max-md:text-sm tracking-wider">
+    <p class="absolute text-white xs:text-sm sm:text-2xl lg:text-4xl  tracking-wider">
         The place where your car dreams come true </p>
 </div>
