--- a/views/partials/imageSliderIndex.ejs
+++ b/views/partials/imageSliderIndex.ejs
@@ -2,23 +2,21 @@
     <% if(imgSliderCars.length > 0) { %>
     <% imgSliderCars.forEach(car => { %>
     <a href="/products/<%= car._id  %>">
-        <div class="slide relative hidden">
+        <div class="slide relative hidden imgSliderXsLg">
             <div>
-                <img class="rounded xs:w-imgSliderXs xs:h-imgSliderXs
-                sm:w-imgSliderSm sm:h-imgSliderSm
-                md:w-imgSliderMd md:h-imgSliderMd 
+                <img class="rounded 
                 lg:w-imgSlider lg:h-imgSlider cursor-pointer" src="/img/<%= car.model %>.jpg" alt="<%= car.model %>">
             </div>
             <div class="absolute bottom-0 xs:p-1 sm:p-4
-            w-full lg:p-5 shadow-2xl bg-white">
-                <div class="xs:text-xs sm:text-sm lg:text-lg">
+            w-full lg:p-5 shadow-2xl bg-white
+            xs:text-xs sm:text-sm md:text-lg">
+                <div class="pt-2 pl-2 carDescXsLg">
                     <span>
                         <%= car.brand.name %>
                     </span>
                     <span><%= car.model  %></span>
                 </div>
-                <div class="flex justify-between 
-                xs:text-xs sm:text-sm lg:text-lg">
+                <div class="flex justify-between px-2">
                     <span class="text-primary"><%= car.year + "." %></span>
                     <span class="font-bold"><%= car.price + " $" %></span>
                 </div>
