--- a/views/partials/mostPopularItem.ejs
+++ b/views/partials/mostPopularItem.ejs
@@ -1,14 +1,18 @@
-<div class="flex flex-col items-center font-bodyFont">
+<div class="flex flex-col items-center font-bodyFont ml-10">
     <h2 class="text-2xl underline">Car of the week:</h2>
     <% if (popularCar) { %>
     <a href="/products/<%= popularCar._id %>">
-        <div class="my-10">
+        <div class="my-10 imgSliderXsLg">
             <div class="overflow-hidden">
-                <img class="w-popularCar h-popularCar center rounded-lg cursor-pointer hover:scale-150 hover:transform duration-500"
-                    src="/img/<%= popularCar.model %>.jpg" alt="">
+                <img class="lg:w-popularCar lg:h-popularCar center
+                rounded-lg cursor-pointer hover:scale-150
+                hover:transform duration-500
+                imgSliderXsLg
+                md:h-imgSliderMd md:w-imgSliderMd" src="/img/<%= popularCar.model %>.jpg" alt="">
             </div>
-            <div class="bg-white pb-5 shadow-2xl">
-                <div class="text-xl pt-5 pl-5">
+            <div class="bg-white pb-5 shadow-2xl
+            xs:text-xs sm:text-sm md:text-lg">
+                <div class="pt-5 pl-5">
                     <span>
                         <%= popularCar.brand.name %>
                     </span>
@@ -16,7 +20,9 @@
                 </div>
                 <div class="flex justify-between">
                     <span class="text-primary pl-5 "><%= popularCar.year + "." %></span>
-                    <span class="font-bold text-2xl pr-10"><%= popularCar.price + " $" %></span>
+                    <span class="font-bold pr-10">
+                        <%= popularCar.price + " $" %>
+                    </span>
                 </div>
             </div>
         </div>
