--- a/views/partials/reviews.ejs
+++ b/views/partials/reviews.ejs
@@ -1,17 +1,18 @@
 <div class="my-20 flex flex-col gap-10 items-center">
     <h3 class="text-2xl font-bodyFont">Hot reviews: </h3>
-    <div class="flex gap-5 mx-7">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/_ALtBbXcyXc?si=Z7ySssrhuO5soaRS"
+    <div class="flex xs:flex-col xs:w-full gap-5 mx-7">
+        <iframe class="video" src="https://www.youtube.com/embed/_ALtBbXcyXc?si=Z7ySssrhuO5soaRS"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/OS_F_dKpPoQ?si=4-M7L-nHJ6zrMZVR"
+        <iframe class="video" src="https://www.youtube.com/embed/OS_F_dKpPoQ?si=4-M7L-nHJ6zrMZVR"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/DRNXWMcgVbs?si=s2Vq1bWUZhHUvyea"
+        <iframe class="video" src="https://www.youtube.com/embed/DRNXWMcgVbs?si=s2Vq1bWUZhHUvyea"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
     </div>
+
 </div>
