--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -82,13 +82,15 @@
 .messageSuccess {
     @apply duration-500 absolute top-10 bg-green-500 px-20 py-5 rounded-lg 
 }
-@media screen and (min-width: 320px) and (max-width: 640px) {
-    .video {
-        width: calc(100% - 2rem); 
-    }
+.carDescriptionIndex {
+    @apply  xs:p-1 sm:p-4
+    w-full lg:p-5 shadow-2xl bg-white
+    xs:text-xs sm:text-sm md:text-lg absolute bottom-0
 }
-@media screen and (min-width: 320px) and (max-width: 1024px) {
-    .imgSliderXsLg {
-        width: calc(100% - 2rem);     
+
+@media screen and (min-width: 320px){
+    .video {
+        width: calc(100% - 2rem);
+        margin: auto;
     }
 }
