--- a/views/partials/imageSliderIndex.ejs
+++ b/views/partials/imageSliderIndex.ejs
@@ -2,14 +2,12 @@
     <% if(imgSliderCars.length > 0) { %>
     <% imgSliderCars.forEach(car => { %>
     <a href="/products/<%= car._id  %>">
-        <div class="slide relative hidden imgSliderXsLg">
+        <div class="slide relative hidden">
             <div>
                 <img class="rounded 
                 lg:w-imgSlider lg:h-imgSlider cursor-pointer" src="/img/<%= car.model %>.jpg" alt="<%= car.model %>">
             </div>
-            <div class="absolute bottom-0 xs:p-1 sm:p-4
-            w-full lg:p-5 shadow-2xl bg-white
-            xs:text-xs sm:text-sm md:text-lg">
+            <div class="carDescriptionIndex">
                 <div class="pt-2 pl-2 carDescXsLg">
                     <span>
                         <%= car.brand.name %>
