--- a/views/partials/mostPopularItem.ejs
+++ b/views/partials/mostPopularItem.ejs
@@ -1,26 +1,24 @@
-<div class="flex flex-col items-center font-bodyFont ml-10">
+<div class="flex flex-col items-center font-bodyFont">
     <h2 class="text-2xl underline">Car of the week:</h2>
     <% if (popularCar) { %>
     <a href="/products/<%= popularCar._id %>">
-        <div class="my-10 imgSliderXsLg">
+        <div class="my-20 xs:my-10 relative">
             <div class="overflow-hidden">
-                <img class="lg:w-popularCar lg:h-popularCar center
+                <img class=" 
                 rounded-lg cursor-pointer hover:scale-150
                 hover:transform duration-500
-                imgSliderXsLg
-                md:h-imgSliderMd md:w-imgSliderMd" src="/img/<%= popularCar.model %>.jpg" alt="">
+                lg:w-imgSlider lg:h-imgSlider" src="/img/<%= popularCar.model %>.jpg" alt="">
             </div>
-            <div class="bg-white pb-5 shadow-2xl
-            xs:text-xs sm:text-sm md:text-lg">
-                <div class="pt-5 pl-5">
+            <div class="carDescriptionIndex ">
+                <div class="pt-2 pl-2">
                     <span>
                         <%= popularCar.brand.name %>
                     </span>
                     <span><%= popularCar.model  %></span>
                 </div>
-                <div class="flex justify-between">
-                    <span class="text-primary pl-5 "><%= popularCar.year + "." %></span>
-                    <span class="font-bold pr-10">
+                <div class="flex justify-between px-2">
+                    <span class="text-primary"><%= popularCar.year + "." %></span>
+                    <span class="font-bold">
                         <%= popularCar.price + " $" %>
                     </span>
                 </div>
