--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -629,9 +629,9 @@ video {
   margin-right: 5rem;
 }
 
-.mx-7{
-  margin-left: 1.75rem;
-  margin-right: 1.75rem;
+.mx-5{
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 
 .mx-auto{
@@ -657,16 +657,6 @@ video {
 .my-64{
   margin-top: 16rem;
   margin-bottom: 16rem;
-}
-
-.mx-10{
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
-}
-
-.mx-5{
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
 }
 
 .mb-20{
@@ -699,6 +689,10 @@ video {
 
 .ml-80{
   margin-left: 20rem;
+}
+
+.ml-auto{
+  margin-left: auto;
 }
 
 .mr-1{
@@ -755,10 +749,6 @@ video {
 
 .h-12{
   height: 3rem;
-}
-
-.h-2\/3{
-  height: 66.666667%;
 }
 
 .h-36{
@@ -829,6 +819,10 @@ video {
   width: 8rem;
 }
 
+.w-4\/5{
+  width: 80%;
+}
+
 .w-40{
   width: 10rem;
 }
@@ -873,10 +867,6 @@ video {
   width: 50rem;
 }
 
-.w-4\/5{
-  width: 80%;
-}
-
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -901,10 +891,6 @@ video {
 
 .grid-cols-3{
   grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-cols-4{
-  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .grid-cols-5{
@@ -1084,10 +1070,6 @@ video {
   padding: 1.25rem;
 }
 
-.p-6{
-  padding: 1.5rem;
-}
-
 .px-16{
   padding-left: 4rem;
   padding-right: 4rem;
@@ -1142,16 +1124,8 @@ video {
   padding-bottom: 10rem;
 }
 
-.pl-10{
-  padding-left: 2.5rem;
-}
-
 .pl-2{
   padding-left: 0.5rem;
-}
-
-.pl-5{
-  padding-left: 1.25rem;
 }
 
 .pt-10{
@@ -1508,6 +1482,41 @@ video {
   }
 }
 
+.footerPopularModels{
+  display: grid;
+  height: 66.666667%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  gap: 1.25rem;
+  padding: 1.5rem;
+  padding-left: 2.5rem;
+}
+
+@media (min-width: 320px){
+  .footerPopularModels{
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 640px){
+  .footerPopularModels{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1024px){
+  .footerPopularModels{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1280px){
+  .footerPopularModels{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
+
 @media screen and (min-width: 320px){
   .video {
     width: calc(100% - 2rem);
@@ -1567,6 +1576,10 @@ video {
 
   .xs\:mt-10{
     margin-top: 2.5rem;
+  }
+
+  .xs\:flex{
+    display: flex;
   }
 
   .xs\:w-40{
@@ -1676,24 +1689,24 @@ video {
     margin-top: 155px;
   }
 
-  .lg\:h-imgSlider{
-    height: 40rem;
+  .lg\:grid{
+    display: grid;
   }
 
   .lg\:h-96{
     height: 24rem;
   }
 
-  .lg\:h-full{
-    height: 100%;
-  }
-
-  .lg\:h-52{
-    height: 13rem;
+  .lg\:h-imgSlider{
+    height: 40rem;
   }
 
   .lg\:w-imgSlider{
     width: 50rem;
+  }
+
+  .lg\:grid-cols-5{
+    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
   .lg\:flex-row{
