--- a/views/products.ejs
+++ b/views/products.ejs
@@ -17,51 +17,60 @@
 
 <body>
     <%- include ./partials/nav.ejs  %>
-    <h2 class="flex justify-center text-3xl tracking-wider font-bodyFont">All products</h2>
-    <div class="flex flex-col relative mb-24 mt-20 w-full font-bodyFont">
-        <form class="mt-20" action="/products" method="post" id="combinedForm">
-            <div class="absolute top-32 left-14 w-44">
-                <%- include ./partials/filterComponent %>
-            </div>
-            <p class="absolute top-20 left-80 text-primary">
-                Items found: <span><%= countDocuments  %></span>
-            </p>
-            <div class="sortSelect">
-                <%- include ./partials/sortComponent  %>
-            </div>
-        </form>
-        <div class="grid grid-cols-3 gap-20 pt-14 mb-52 w-3/4 ml-80">
-            <% if (cars.length > 0) { %>
-            <% cars.forEach(car =>{ %>
-            <a href="/products/<%= car._id  %>">
+    <section class="xs:mt-72 sm:mt-20 font-bodyFont">
+        <h2 class="flex justify-center text-3xl tracking-wider">All products</h2>
+        <div class="flex flex-col relative mb-24 mt-10">
+            <form class="flex flex-col items-center" action="/products" method="post" id="combinedForm">
                 <div>
-                    <div class="overflow-hidden w-productsImg ">
-                        <img class="h-productsImg rounded-tr-lg rounded-tl-lg hover:scale-125 hover:transform duration-700"
-                            src="/img/<%= car.model %>.jpg" alt="<%= car.model  %>">
-                    </div>
-                    <div class="w-productsImg px-4 font-bodyFont shadow-2xl">
-                        <p class="pt-6 text-base">
-                            <span><%= car.brand.name %></span>
-                            <span><%= car.model  %></span>
-                        </p>
-                        <div class="flex justify-between">
-                            <p class="text-primary"><%= car.year %></p>
-                            <p class="font-bold p-2">
-                                <%= car.price + "$"%>
+                    <%- include ./partials/filterComponent %>
+                </div>
+                <p class="absolute top-60 text-primary
+                xs:hidden">
+                    Items found: <span><%= countDocuments  %></span>
+                </p>
+                <div>
+                    <%- include ./partials/sortComponent  %>
+                </div>
+            </form>
+            <!-- Div za sve produkte -->
+            <div class="grid gap-20 pt-14
+            xs:grid-cols-1 mx-auto relative">
+                <p class="absolute top-0 right-10 md:left-10 text-primary
+                lg:hidden">
+                    Items found: <span><%= countDocuments  %></span>
+                </p>
+                <% if (products && products.length > 0) { %>
+                <% products.forEach(car =>{ %>
+                <a href="/products/<%= car._id  %>">
+                    <div class="text-sm">
+                        <div class="overflow-hidden">
+                            <img class="rounded-tr-lg rounded-tl-lg 
+                            hover:scale-125 hover:transform duration-700" src="/img/<%= car.model %>.jpg"
+                                alt="<%= car.model  %>">
+                        </div>
+                        <div class="px-4 font-bodyFont shadow-2xl">
+                            <p class="pt-2 pl-2 ">
+                                <span><%= car.brand.name %></span>
+                                <span><%= car.model  %></span>
                             </p>
+                            <div class="flex justify-between px-2">
+                                <p class="text-primary"><%= car.year %></p>
+                                <p class="font-bold">
+                                    <%= car.price + "$"%>
+                                </p>
+                            </div>
                         </div>
                     </div>
+                </a>
+                <% }) %>
+                <% } else { %>
+                <div class="mt-20 col-span-3 flex justify-center">
+                    <p>NOT FOUND</p>
                 </div>
-            </a>
-            <% }) %>
-            <% } else { %>
-            <div class="mt-20 col-span-3 flex justify-center">
-                <p>NOT FOUND</p>
+                <% } %>
             </div>
-            <% } %>
-
         </div>
-    </div>
+    </section>
     <%- include ./partials/footer.ejs  %>
 
     <script>
