--- a/views/products.ejs
+++ b/views/products.ejs
@@ -17,26 +17,35 @@
 
 <body>
     <%- include ./partials/nav.ejs  %>
-    <section class="xs:mt-72 sm:mt-20 font-bodyFont">
+    <section class="xs:mt-72 sm:mt-20 lg:mt-0  
+    font-bodyFont">
         <h2 class="flex justify-center text-3xl tracking-wider">All products</h2>
-        <div class="flex flex-col relative mb-24 mt-10">
-            <form class="flex flex-col items-center" action="/products" method="post" id="combinedForm">
-                <div>
+        <div class="flex xs:flex-col
+        items-center lg:flex-row relative mb-24 lg:mt-10">
+            <form class="flex flex-col items-center mb-10 w-full lg:w-96" action="/products" method="post"
+                id="combinedForm">
+                <div class=" mt-20
+                sm:w-full">
                     <%- include ./partials/filterComponent %>
                 </div>
                 <p class="absolute top-60 text-primary
                 xs:hidden">
                     Items found: <span><%= countDocuments  %></span>
                 </p>
-                <div>
+                <div class="flex gap-5 justify-between items-end 
+                xs:max-lg:w-4/5 ">
                     <%- include ./partials/sortComponent  %>
+                    <p class="text-primary lg:hidden">
+                        Items found: <span><%= countDocuments  %></span>
+                    </p>
                 </div>
             </form>
             <!-- Div za sve produkte -->
-            <div class="grid gap-20 pt-14
-            xs:grid-cols-1 mx-auto relative">
-                <p class="absolute top-0 right-10 md:left-10 text-primary
-                lg:hidden">
+            <div class="grid gap-20 lg:pt-10
+            xs:grid-cols-1 xs:pt-0 lg:grid-cols-2 2xl:grid-cols-3
+            lg:mr-10 relative w-full">
+                <p class="text-primary absolute top-0 right-10
+                xs:hidden lg:block">
                     Items found: <span><%= countDocuments  %></span>
                 </p>
                 <% if (products && products.length > 0) { %>
@@ -44,7 +53,8 @@
                 <a href="/products/<%= car._id  %>">
                     <div class="text-sm">
                         <div class="overflow-hidden">
-                            <img class="rounded-tr-lg rounded-tl-lg 
+                            <img class="rounded-tr-lg rounded-tl-lg lg:w-productsImg
+                            lg:h-productsImg
                             hover:scale-125 hover:transform duration-700" src="/img/<%= car.model %>.jpg"
                                 alt="<%= car.model  %>">
                         </div>
@@ -65,7 +75,7 @@
                 <% }) %>
                 <% } else { %>
                 <div class="mt-20 col-span-3 flex justify-center">
-                    <p>NOT FOUND</p>
+                    <p class="font-bold text-2xl">NOT FOUND</p>
                 </div>
                 <% } %>
             </div>
