--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -1171,6 +1171,11 @@ video {
   fill: #969799;
 }
 
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .p-10{
   padding: 2.5rem;
 }
@@ -1689,6 +1694,16 @@ video {
     margin-bottom: 2.5rem;
   }
 
+  .xs\:my-60{
+    margin-top: 15rem;
+    margin-bottom: 15rem;
+  }
+
+  .xs\:my-80{
+    margin-top: 20rem;
+    margin-bottom: 20rem;
+  }
+
   .xs\:ml-0{
     margin-left: 0px;
   }
@@ -1888,6 +1903,11 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:my-40{
+    margin-top: 10rem;
+    margin-bottom: 10rem;
+  }
+
   .md\:mt-0{
     margin-top: 0px;
   }
@@ -1955,6 +1975,11 @@ video {
   .lg\:mx-24{
     margin-left: 6rem;
     margin-right: 6rem;
+  }
+
+  .lg\:my-20{
+    margin-top: 5rem;
+    margin-bottom: 5rem;
   }
 
   .lg\:mt-0{
