--- a/views/itemPage.ejs
+++ b/views/itemPage.ejs
@@ -11,9 +11,9 @@
 
 <body>
     <%- include ./partials/nav.ejs  %>
-    <div class="my-20 flex justify-center">
+    <div class="xs:my-80 md:my-40 lg:my-20 flex justify-center">
         <form method="post" class="flex w-singleCarPage flex-col items-center">
-            <img class="h-singleCarPage rounded" src="/img/<%= car.model %>.jpg" alt="<%= car.model  %>">
+            <img class="h-singleCarPage rounded object-cover" src="/img/<%= car.model %>.jpg" alt="<%= car.model  %>">
             <div class="w-full p-10 font-bodyFont">
                 <div class="flex flex-col gap-5">
                     <h2 class="flex justify-center text-2xl underline">Car information:</h2>
