Contact page done

--- a/views/partials/contactPage.ejs
+++ b/views/partials/contactPage.ejs
@@ -1,4 +1,5 @@
-<div class="font-bodyFont flex flex-col items-center gap-9">
+<div class="font-bodyFont flex flex-col items-center gap-9 
+xs:mt-80 sm:mt-20 lg:mt-0">
     <h2 class="text-3xl">Contact</h2>
     <p class="text-primary tracking-wider">At <span class="text-black">DriftDreams</span>
         , we value your inquiries and strive to provide
@@ -9,23 +10,27 @@
         dedicated team is committed to addressing your concerns promptly and thoroughly.
         Your satisfaction is our priority. So, don't hesitate and reach out to us today!
     </p>
-    <form action="" class="my-20 flex flex-col gap-10 items-center">
-        <div class="flex gap-10">
-            <div class="inputContact">
+    <form action="" class="my-20 flex flex-col gap-10 items-center 
+    xs:w-1/2 lg:w-full">
+        <div class="flex gap-10 xs:flex-col sm:flex-row">
+            <div class="inputContact xs:w-2/3 md:w-full mx-auto 
+            xs:placeholder:text-sm">
                 <label for="email">Email</label>
-                <input required class="p-5 border-2 border-primary" type="email" id="email"
+                <input required class="p-3 border-2 border-primary 
+                xs:placeholder:text-sm md:placeholder:text-base" type="email" id="email"
                     placeholder="Enter your email...">
             </div>
-            <div class="inputContact">
+            <div class="inputContact xs:w-2/3 md:w-full mx-auto">
                 <label for="name">Name</label>
-                <input required class="p-5 border-2 border-primary" type="text" id="name"
+                <input required class="p-3 border-2 border-primary
+                xs:placeholder:text-sm md:placeholder:text-base" type="text" id="name"
                     placeholder="Enter your name...">
             </div>
         </div>
-        <div class="inputContact">
-            <label for="message">Message</label>
-            <textarea required class="message border-2 border-primary p-4 resize-x" name="" cols="30"
-                rows="10"></textarea>
+        <div class="inputContact xs:w-96 md:w-2/3 flex flex-col">
+            <label class="flex" for="message">Message</label>
+            <textarea required class="message border-2 
+            border-primary p-4 resize-x" name="" cols="30" rows="10"></textarea>
         </div>
         <button class="btn bg-black text-white uppercase">send</button>
         <div class="messageContact messageSuccess opacity-0">
