--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -574,54 +574,6 @@ video {
   top: 15rem;
 }
 
-.top-10{
-  top: 2.5rem;
-}
-
-.top-5{
-  top: 1.25rem;
-}
-
-.top-52{
-  top: 13rem;
-}
-
-.top-44{
-  top: 11rem;
-}
-
-.left-0{
-  left: 0px;
-}
-
-.left-10{
-  left: 2.5rem;
-}
-
-.right-5{
-  right: 1.25rem;
-}
-
-.top-16{
-  top: 4rem;
-}
-
-.top-96{
-  top: 24rem;
-}
-
-.bottom-0{
-  bottom: 0px;
-}
-
-.bottom-20{
-  bottom: 5rem;
-}
-
-.top-20{
-  top: 5rem;
-}
-
 .z-10{
   z-index: 10;
 }
@@ -640,18 +592,6 @@ video {
 
 .col-span-4{
   grid-column: span 4 / span 4;
-}
-
-.col-start-2{
-  grid-column-start: 2;
-}
-
-.col-start-1{
-  grid-column-start: 1;
-}
-
-.col-end-3{
-  grid-column-end: 3;
 }
 
 .row-span-4{
@@ -711,9 +651,8 @@ video {
   margin-bottom: 16rem;
 }
 
-.mx-10{
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
+.mb-10{
+  margin-bottom: 2.5rem;
 }
 
 .mb-20{
@@ -788,28 +727,12 @@ video {
   margin-top: 2rem;
 }
 
-.mt-40{
-  margin-top: 10rem;
-}
-
-.mb-10{
-  margin-bottom: 2.5rem;
-}
-
-.ml-10{
-  margin-left: 2.5rem;
-}
-
 .ml-20{
   margin-left: 5rem;
 }
 
-.mr-20{
-  margin-right: 5rem;
-}
-
-.mr-10{
-  margin-right: 2.5rem;
+.ml-40{
+  margin-left: 10rem;
 }
 
 .flex{
@@ -856,28 +779,8 @@ video {
   height: 40rem;
 }
 
-.h-productsImg{
-  height: 20rem;
-}
-
-.h-96{
-  height: 24rem;
-}
-
-.h-full{
-  height: 100%;
-}
-
 .max-h-index{
   max-height: 40rem;
-}
-
-.max-h-productsItem{
-  max-height: 25rem;
-}
-
-.min-h-productsItem{
-  min-height: 25rem;
 }
 
 .w-1\/3{
@@ -948,26 +851,6 @@ video {
   width: 50rem;
 }
 
-.w-productsImg{
-  width: 25rem;
-}
-
-.w-auto{
-  width: auto;
-}
-
-.w-20{
-  width: 5rem;
-}
-
-.w-80{
-  width: 20rem;
-}
-
-.w-96{
-  width: 24rem;
-}
-
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1014,20 +897,8 @@ video {
   grid-template-rows: repeat(6, minmax(0, 1fr));
 }
 
-.grid-rows-4{
-  grid-template-rows: repeat(4, minmax(0, 1fr));
-}
-
-.flex-row{
-  flex-direction: row;
-}
-
 .flex-col{
   flex-direction: column;
-}
-
-.items-start{
-  align-items: flex-start;
 }
 
 .items-end{
@@ -1052,10 +923,6 @@ video {
 
 .justify-between{
   justify-content: space-between;
-}
-
-.justify-around{
-  justify-content: space-around;
 }
 
 .gap-10{
@@ -1258,16 +1125,8 @@ video {
   padding-top: 2.5rem;
 }
 
-.pt-14{
-  padding-top: 3.5rem;
-}
-
 .pt-2{
   padding-top: 0.5rem;
-}
-
-.pt-20{
-  padding-top: 5rem;
 }
 
 .text-start{
@@ -1694,11 +1553,6 @@ video {
     margin-bottom: 2.5rem;
   }
 
-  .xs\:my-60{
-    margin-top: 15rem;
-    margin-bottom: 15rem;
-  }
-
   .xs\:my-80{
     margin-top: 20rem;
     margin-bottom: 20rem;
@@ -1732,6 +1586,10 @@ video {
     height: 10rem;
   }
 
+  .xs\:w-1\/2{
+    width: 50%;
+  }
+
   .xs\:w-40{
     width: 10rem;
   }
@@ -1748,16 +1606,12 @@ video {
     width: 66.666667%;
   }
 
-  .xs\:w-full{
-    width: 100%;
+  .xs\:w-96{
+    width: 24rem;
   }
 
   .xs\:grid-cols-1{
     grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-
-  .xs\:flex-row{
-    flex-direction: row;
   }
 
   .xs\:flex-col{
@@ -1766,18 +1620,6 @@ video {
 
   .xs\:gap-10{
     gap: 2.5rem;
-  }
-
-  .xs\:pt-10{
-    padding-top: 2.5rem;
-  }
-
-  .xs\:pt-20{
-    padding-top: 5rem;
-  }
-
-  .xs\:pt-32{
-    padding-top: 8rem;
   }
 
   .xs\:pt-0{
@@ -1794,61 +1636,41 @@ video {
     line-height: 1.75rem;
   }
 
+  .xs\:placeholder\:text-sm::-moz-placeholder{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .xs\:placeholder\:text-sm::placeholder{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
   @media not all and (min-width: 1024px){
     .xs\:max-lg\:mt-72{
       margin-top: 18rem;
-    }
-
-    .xs\:max-lg\:w-full{
-      width: 100%;
-    }
-
-    .xs\:max-lg\:w-2\/3{
-      width: 66.666667%;
     }
 
     .xs\:max-lg\:w-4\/5{
       width: 80%;
     }
   }
-
-  @media not all and (min-width: 768px){
-    .xs\:max-md\:ml-10{
-      margin-left: 2.5rem;
-    }
-
-    .xs\:max-md\:w-full{
-      width: 100%;
-    }
-  }
 }
 
 @media (min-width: 640px){
-  .sm\:absolute{
-    position: absolute;
-  }
-
-  .sm\:left-0{
-    left: 0px;
-  }
-
-  .sm\:top-80{
-    top: 20rem;
-  }
-
   .sm\:mx-16{
     margin-left: 4rem;
     margin-right: 4rem;
   }
 
-  .sm\:my-20{
-    margin-top: 5rem;
-    margin-bottom: 5rem;
-  }
-
   .sm\:mx-20{
     margin-left: 5rem;
     margin-right: 5rem;
+  }
+
+  .sm\:my-20{
+    margin-top: 5rem;
+    margin-bottom: 5rem;
   }
 
   .sm\:ml-8{
@@ -1859,8 +1681,8 @@ video {
     margin-top: 5rem;
   }
 
-  .sm\:ml-40{
-    margin-left: 10rem;
+  .sm\:mt-40{
+    margin-top: 10rem;
   }
 
   .sm\:h-60{
@@ -1875,20 +1697,16 @@ video {
     width: 100%;
   }
 
+  .sm\:w-2\/3{
+    width: 66.666667%;
+  }
+
   .sm\:flex-row{
     flex-direction: row;
   }
 
-  .sm\:justify-between{
-    justify-content: space-between;
-  }
-
   .sm\:justify-around{
     justify-content: space-around;
-  }
-
-  .sm\:gap-20{
-    gap: 5rem;
   }
 
   .sm\:text-2xl{
@@ -1920,6 +1738,14 @@ video {
     width: 100%;
   }
 
+  .md\:w-4\/5{
+    width: 80%;
+  }
+
+  .md\:w-2\/3{
+    width: 66.666667%;
+  }
+
   .md\:text-3xl{
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -1929,49 +1755,19 @@ video {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .md\:placeholder\:text-base::-moz-placeholder{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .md\:placeholder\:text-base::placeholder{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 @media (min-width: 1024px){
-  .lg\:absolute{
-    position: absolute;
-  }
-
-  .lg\:right-0{
-    right: 0px;
-  }
-
-  .lg\:right-10{
-    right: 2.5rem;
-  }
-
-  .lg\:right-16{
-    right: 4rem;
-  }
-
-  .lg\:left-10{
-    left: 2.5rem;
-  }
-
-  .lg\:top-52{
-    top: 13rem;
-  }
-
-  .lg\:top-0{
-    top: 0px;
-  }
-
-  .lg\:left-0{
-    left: 0px;
-  }
-
-  .lg\:top-5{
-    top: 1.25rem;
-  }
-
-  .lg\:left-1{
-    left: 0.25rem;
-  }
-
   .lg\:mx-24{
     margin-left: 6rem;
     margin-right: 6rem;
@@ -1982,36 +1778,12 @@ video {
     margin-bottom: 5rem;
   }
 
-  .lg\:mt-0{
-    margin-top: 0px;
-  }
-
-  .lg\:ml-20{
-    margin-left: 5rem;
-  }
-
-  .lg\:ml-52{
-    margin-left: 13rem;
-  }
-
-  .lg\:ml-64{
-    margin-left: 16rem;
-  }
-
-  .lg\:ml-80{
-    margin-left: 20rem;
-  }
-
-  .lg\:mt-40{
-    margin-top: 10rem;
-  }
-
   .lg\:mr-10{
     margin-right: 2.5rem;
   }
 
-  .lg\:mt-20{
-    margin-top: 5rem;
+  .lg\:mt-0{
+    margin-top: 0px;
   }
 
   .lg\:mt-10{
@@ -2042,8 +1814,12 @@ video {
     height: 20rem;
   }
 
-  .lg\:h-64{
-    height: 16rem;
+  .lg\:w-96{
+    width: 24rem;
+  }
+
+  .lg\:w-full{
+    width: 100%;
   }
 
   .lg\:w-imgSlider{
@@ -2052,14 +1828,6 @@ video {
 
   .lg\:w-productsImg{
     width: 25rem;
-  }
-
-  .lg\:w-64{
-    width: 16rem;
-  }
-
-  .lg\:w-96{
-    width: 24rem;
   }
 
   .lg\:grid-cols-2{
@@ -2080,10 +1848,6 @@ video {
 
   .lg\:justify-between{
     justify-content: space-between;
-  }
-
-  .lg\:pt-20{
-    padding-top: 5rem;
   }
 
   .lg\:pt-10{
