--- a/views/itemPage.ejs
+++ b/views/itemPage.ejs
@@ -13,7 +13,8 @@
     <%- include ./partials/nav.ejs  %>
     <div class="xs:my-80 md:my-40 lg:my-20 flex justify-center">
         <form method="post" class="flex w-singleCarPage flex-col items-center">
-            <img class="h-singleCarPage rounded object-cover" src="/img/<%= car.model %>.jpg" alt="<%= car.model  %>">
+            <img class="xs:w-2/3 md:w-popularCar md:h-popularCar" src="/img/<%= car.model %>.jpg"
+                alt="<%= car.model  %>">
             <div class="w-full p-10 font-bodyFont">
                 <div class="flex flex-col gap-5">
                     <h2 class="flex justify-center text-2xl underline">Car information:</h2>
